--- a/Views/Admin/_PartialTopLeftNavBar.cshtml
+++ b/Views/Admin/_PartialTopLeftNavBar.cshtml
@@ -252,6 +252,9 @@
                     <li class='@TempData["MaterialPickup"]'>
                         <a href='@Url.Action("MaterialPickup", "Admin")'><i class="fa fa-code-fork"></i>  Material Pickup</a>
                     </li>
+                    <li class='@TempData["Stock"]'>
+                        <a href='@Url.Action("Stock", "Admin")'><i class="fa fa-code-fork"></i>  Stock</a>
+                    </li>
                 </ul>
             </li>
             @*<li class='@TempData["Payments"]'>
