--- a/Views/Admin/POGenerate.cshtml
+++ b/Views/Admin/POGenerate.cshtml
@@ -497,7 +497,7 @@
                                                  })
                             </div>
                         </div>
-                        <table id="tblPOGenerate" class="table table-bordered display nowrap">
+                        <table id="tblPOGenerate" class="table table-bordered display">
                             <thead>
                                 <tr>
                                     <th><input type="checkbox" id="seallsrspo" /></th>
