--- a/Views/Admin/PRApproval.cshtml
+++ b/Views/Admin/PRApproval.cshtml
@@ -116,7 +116,7 @@
                                         <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
                                         <td><a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a></td>
                                         <td>
-                                            @Html.EncodedActionLink(item.POId, "PODetails", "Admin", new { id = item.POId }, new { @class = "", title = "Details", @target = "_blank" })
+                                            @Html.EncodedActionLink(item.POId, "PODetails", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Details", @target = "_blank" })
                                         </td>
                                         <td>
                                             @Html.EncodedActionLink(item.VPONumber, "DownloadPO", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Download", @target = "_blank" })
