--- a/Views/Admin/PaymentProcessing.cshtml
+++ b/Views/Admin/PaymentProcessing.cshtml
@@ -67,7 +67,7 @@
                                 })
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                        @*<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                             <div class="form-group">
                                 @Html.LabelFor(m => m.Status, new { @class = "form-control-label" })
                                 @Html.DropDownListFor(m => m.Status,
@@ -79,6 +79,14 @@
                                 "--Select Status--", new { @class = "form-control select2" })
                                 @Html.ValidationMessageFor(m => m.Status, "",
                         new { @class = "text-danger" })
+                            </div>
+                        </div>*@
+                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                            <div class="box-tools pull-left">
+                                <button type="submit" name="search" class="btn bg-aqua" title="SEARCH"
+                                        value="search">
+                                    SEARCH
+                                </button>
                             </div>
                         </div>
                         <table id="tblPaymentProcessing" class="table table-bordered display nowrap">
