--- a/Views/Admin/RequestPayment.cshtml
+++ b/Views/Admin/RequestPayment.cshtml
@@ -82,6 +82,14 @@
                             new { @class = "text-danger" })
                                 </div>
                             </div>*@
+                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                            <div class="box-tools pull-left">
+                                <button type="submit" name="search" class="btn bg-aqua" title="SEARCH"
+                                        value="search">
+                                    SEARCH
+                                </button>
+                            </div>
+                        </div>
                         <table id="tblRequestPayment" class="table table-bordered display">
                             <thead>
                                 <tr>
