--- a/Views/Admin/POApproved.cshtml
+++ b/Views/Admin/POApproved.cshtml
@@ -68,7 +68,14 @@
                                 })
                             </div>
                         </div>
-
+                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                            <div class="box-tools pull-left">
+                                <button type="submit" name="search" class="btn bg-aqua" title="SEARCH"
+                                        value="search">
+                                    SEARCH
+                                </button>
+                            </div>
+                        </div>
                         <table id="tblPOApproved" class="table table-bordered display">
                             <thead>
                                 <tr>
@@ -90,29 +97,29 @@
                             <tbody>
                                 @foreach (var item in Model.PurchaseOrdersModelList)
                                 {
-                                <tr>
-                                    <td></td>
-                                    <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
-                                    <td>
-                                        @Html.EncodedActionLink(item.POId, "PODetails", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Edit", @target = "_blank" })
-                                    </td>
-                                    <td>@Html.DisplayFor(modelItem => item.VPONumber)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.VendorId)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.VendorPrice)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Price)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Margin)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.LMRemarks)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>
-                                    <td>
-                                        @if (item.Status == "AP")
-                                        {
-                                            @Html.EncodedActionLink("Download", "DownloadPO", "Admin",
-                                                new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", title = "Edit" })
-                                        }
-                                    </td>
-                                </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
+                                        <td>
+                                            @Html.EncodedActionLink(item.POId, "PODetails", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Edit", @target = "_blank" })
+                                        </td>
+                                        <td>@Html.DisplayFor(modelItem => item.VPONumber)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.VendorId)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.VendorPrice)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.Price)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.Margin)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.LMRemarks)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>
+                                        <td>
+                                            @if (item.Status == "AP")
+                                            {
+                                                @Html.EncodedActionLink("Download", "DownloadPO", "Admin",
+                                                    new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", title = "Edit" })
+                                            }
+                                        </td>
+                                    </tr>
                                 }
                             </tbody>
                         </table>
