--- a/Views/Admin/UserPermission.cshtml
+++ b/Views/Admin/UserPermission.cshtml
@@ -80,10 +80,10 @@
                             <div class="col-md-12">
                                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                                     <div class="form-group m-b-0">
-                                        @Html.LabelFor(m => m.AddUserModels.EmployeeCode, new { @class = "form-control-label" })
-                                        @Html.DropDownListFor(model => model.AddUserModels.EmployeeCode, new SelectList(Model.KeysValuesModelList, "Keys", "Values"),
+                                        @Html.LabelFor(m => m.AddUserModels.UserCode, new { @class = "form-control-label" })
+                                        @Html.DropDownListFor(model => model.AddUserModels.UserCode, new SelectList(Model.KeysValuesModelList, "Key", "Value"),
                                         "-- Select Employee --", new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(m => m.AddUserModels.EmployeeCode, "",
+                                        @Html.ValidationMessageFor(m => m.AddUserModels.UserCode, "",
                                         new { @class = "text-danger" })
 
                                     </div>
