--- a/Views/Admin/_PartialTopLeftNavBar.cshtml
+++ b/Views/Admin/_PartialTopLeftNavBar.cshtml
@@ -111,8 +111,8 @@
                     <li class='@TempData["UserLogin"]'>
                         <a href='@Url.Action("UserLogin", "Admin")'><i class="fa fa-code-fork"></i>  User Login</a>
                     </li>
-                    @*<li class='@TempData["UserPermissions"]'>
-                        <a href='@Url.Action("UserPermissions", "Admin")'><i class="fa fa-code-fork"></i>  User Permission</a>
+                    @*<li class='@TempData["UserPermission"]'>
+                        <a href='@Url.Action("UserPermission", "Admin")'><i class="fa fa-code-fork"></i>  User Permission</a>
                     </li>*@
                 </ul>
             </li>
