PO Generate Error Solve

--- a/Views/Admin/_PartialTopLeftNavBar.cshtml
+++ b/Views/Admin/_PartialTopLeftNavBar.cshtml
@@ -111,9 +111,9 @@
                     <li class='@TempData["UserLogin"]'>
                         <a href='@Url.Action("UserLogin", "Admin")'><i class="fa fa-code-fork"></i>  User Login</a>
                     </li>
-                    @*<li class='@TempData["UserPermission"]'>
+                    <li class='@TempData["UserPermission"]'>
                         <a href='@Url.Action("UserPermission", "Admin")'><i class="fa fa-code-fork"></i>  User Permission</a>
-                    </li>*@
+                    </li>
                 </ul>
             </li>
             <li class='@TempData["Vendor"] treeview'>
