--- a/Views/Admin/MaterialReceive.cshtml
+++ b/Views/Admin/MaterialReceive.cshtml
@@ -2,7 +2,7 @@
 @model Vendor_Indusuno.ViewModels.PurchaseOrdersViewModel
 @{
     ViewBag.Title = "Material Receive";
-    TempData["Purchase"] = "active";
+    TempData["Operations"] = "active";
     TempData["MaterialReceive"] = "active";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
