--- a/Views/Admin/PORequestPayment.cshtml
+++ b/Views/Admin/PORequestPayment.cshtml
@@ -2,7 +2,7 @@
 @model Vendor_Indusuno.ViewModels.PORequestPaymentViewModel
 @{
     ViewBag.Title = "PO Request Payment";
-    TempData["Purchase"] = "active";
+    TempData["Payment"] = "active";
     TempData["RequestPayment"] = "active";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
