--- a/Views/Admin/Stock.cshtml
+++ b/Views/Admin/Stock.cshtml
@@ -2,7 +2,7 @@
 @model Vendor_Indusuno.ViewModels.StockViewModel
 @{
     ViewBag.Title = "Stock";
-    TempData["Purchase"] = "active";
+    TempData["Stocks"] = "active";
     TempData["Stock"] = "active";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
