--- a/Views/Admin/POApproved.cshtml
+++ b/Views/Admin/POApproved.cshtml
@@ -80,6 +80,7 @@
                             <thead>
                                 <tr>
                                     <th>SNo</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().POADate)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().OrderDate)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().CustomerName)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().PONumber)</th>
@@ -99,6 +100,16 @@
                                 {
                                     <tr>
                                         <td></td>
+                                        <td>
+                                            @if (item.POADate == "01/01/1900")
+                                            {
+                                                
+                                            }
+                                            else
+                                            {
+                                                @Html.DisplayFor(modelItem => item.POADate)
+                                            }
+                                        </td>
                                         <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
                                         <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
                                         <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
