--- a/Views/Admin/PaymentProcessing.cshtml
+++ b/Views/Admin/PaymentProcessing.cshtml
@@ -2,7 +2,7 @@
 @model Vendor_Indusuno.ViewModels.PaymentProcessingViewModel
 @{
     ViewBag.Title = "Payment Processing";
-    TempData["Purchase"] = "active";
+    TempData["Payment"] = "active";
     TempData["PaymentProcessing"] = "active";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
@@ -68,19 +68,19 @@
                             </div>
                         </div>
                         @*<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                            <div class="form-group">
-                                @Html.LabelFor(m => m.Status, new { @class = "form-control-label" })
-                                @Html.DropDownListFor(m => m.Status,
-                               new List<SelectListItem>
-                                  {
-                                    new SelectListItem{ Text="Success", Value = "Success", Selected = true },
-                                    new SelectListItem{ Text="Pending", Value = "Pending" },
-                                  },
-                                "--Select Status--", new { @class = "form-control select2" })
-                                @Html.ValidationMessageFor(m => m.Status, "",
-                        new { @class = "text-danger" })
-                            </div>
-                        </div>*@
+                                <div class="form-group">
+                                    @Html.LabelFor(m => m.Status, new { @class = "form-control-label" })
+                                    @Html.DropDownListFor(m => m.Status,
+                                   new List<SelectListItem>
+                                      {
+                                        new SelectListItem{ Text="Success", Value = "Success", Selected = true },
+                                        new SelectListItem{ Text="Pending", Value = "Pending" },
+                                      },
+                                    "--Select Status--", new { @class = "form-control select2" })
+                                    @Html.ValidationMessageFor(m => m.Status, "",
+                            new { @class = "text-danger" })
+                                </div>
+                            </div>*@
                         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                             <div class="box-tools pull-left">
                                 <button type="submit" name="search" class="btn bg-aqua" title="SEARCH"
@@ -115,7 +115,16 @@
                                 <tr>
                                     <td></td>
                                     <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.PADate)</td>
+                                    <td>
+                                        @if (item.PADate == "01/01/1900")
+                                        {
+
+                                        }
+                                        else
+                                        {
+                                            @Html.DisplayFor(modelItem => item.PADate)
+                                        }
+                                    </td>
                                     <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
                                     <td><a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a></td>
                                     <td>
@@ -125,7 +134,14 @@
                                     <td>
                                         @Html.EncodedActionLink(item.VPONumber, "DownloadPO", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Download", @target = "_blank" })
                                     </td>
-                                    <td>@Html.DisplayFor(modelItem => item.VendorId)</td>
+                                    @if (!string.IsNullOrEmpty(item.PIUpload))
+                                    {
+                                        <td><a href='~/Content/upload/popayment/@item.PIUpload' target="_blank">@item.VendorId</a></td>
+                                    }
+                                    else
+                                    {
+                                        <td>@Html.DisplayFor(modelItem => item.VendorId)</td>
+                                    }
                                     <td>@Html.DisplayFor(modelItem => item.VendorPrice)</td>
                                     <td>@Html.DisplayFor(modelItem => item.Price)</td>
                                     <td>@Html.DisplayFor(modelItem => item.Margin)</td>
